<resources>
    <string name="app_name">Password Manager</string>
    <string name="hidden_field_content">***</string>
    <string name="go_to_set_website">Go to set website</string>
    <string name="default_name">Auth Data</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="card_caption">Show Caption</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>

    <string name="record_name">Record Name</string>
    <string name="record_url">Website</string>
    <string name="record_caption">Caption</string>

    <string name="login_copied">Login has been copied to clipboard</string>
    <string name="password_copied">Password has been copied to clipboard</string>
    <string name="cant_open_link">Link is invalid!</string>

    <string name="name_not_set">Name has not been set!</string>
    <string name="login_not_set">Login has not been set!</string>
    <string name="password_not_set">Password has not been set!</string>

    <string name="generate_password">Generate password</string>
</resources>