<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/secondary"
        app:cardCornerRadius="30dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/default_name"
                        android:textColor="@color/text_color"
                        android:textSize="20sp" />

                    <ImageButton
                        android:id="@+id/goToWebsite"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/gotowebsite"
                        android:contentDescription="@string/go_to_set_website" />

                    <ImageButton
                        android:id="@+id/editRecord"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="8dp"
                        android:background="@drawable/edit"
                        android:contentDescription="@string/go_to_set_website" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/name"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start|center"
                            android:text="@string/login"
                            android:textColor="@color/text_color"
                            android:layout_weight=".30"/>

                        <EditText
                            android:id="@+id/login"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:minHeight="70dp"
                            android:text="@string/hidden_field_content"
                            android:textAlignment="center"
                            android:textColor="@color/accent"
                            app:backgroundTint="@color/accent"
                            android:layout_weight=".70"
                            android:focusable="false" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/password"
                            android:textColor="@color/text_color"
                            android:layout_weight=".30"/>
                        <EditText
                            android:id="@+id/password"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:minHeight="70dp"
                            android:text="@string/hidden_field_content"
                            android:textAlignment="center"
                            android:textColor="@color/accent"
                            app:backgroundTint="@color/accent"
                            android:layout_weight=".70"
                            android:focusable="false" />

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical"
                        android:layout_marginTop="16dp">

                        <Button
                            android:id="@+id/caption"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/card_caption" />

                        <TextView
                            android:id="@+id/caption_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>